change teamcity version

--- a/teamcity/Dockerfile
+++ b/teamcity/Dockerfile
@@ -68,9 +68,9 @@ CMD ["/run-services.sh"]
 
 MAINTAINER thomas-x <thomas.zwarts.codes>
 
-RUN wget -v https://download.jetbrains.com/teamcity/TeamCity-9.1.4.tar.gz && \
-    tar -xzvf TeamCity-9.1.4.tar.gz && \
-    rm TeamCity-9.1.4.tar.gz
+RUN wget -v https://download-cf.jetbrains.com/teamcity/TeamCity-2019.1.5.tar.gz && \
+    tar -xzvf TeamCity-2019.1.5.tar.gz && \
+    rm TeamCity-2019.1.5.tar.gz
 
 EXPOSE 8111 9090
 
